# lab13-sprint-google-translate-game

./: .gitignore  README.md  galvanic-circle-456503-r4-cc00b2ad33ff.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  testing.yml
src/tests/: test_menu.py  test_questions.py  test_scoreBoard.py  test_translation.py
src/translate-game/: data.py  main.py  menu.py  score_board.py  translation.py
src/translate_game/: main.py  menu.py  score_board.py  selectingQuizQuestions.py  translation.py
tests/: __init__.py  test_questions.py  test_quiz.py
