[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translate_game"]

[project]
name = "COSC381_WINTER25_TRANSLATION_GAME"
version = "0.0.8"
authors = [
  { name="Patrick Martus" },
  { name="Sanghyeon Jun"},
  { name="Hunter Martin"},
  { name="Adam Snowgold"}
]
description = "A simple quiz using Cloud Translate API"
readme = "README.md"
requires-python = ">=3.12.3"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "google-cloud-translate>=3.13.0",
  "jaraco.classes>=3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.1.0",
  "jeepney==0.9.0",
  "keyring==25.6.0",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "more-itertools==10.6.0",
  "nh3==0.2.21",
  "oauthlib==3.2.2",
  "packaging==24.2",
  "pluggy==1.5.0",
  "proto-plus==1.26.1",
  "protobuf==5.29.4",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pycparser==2.22",
  "Pygments==2.19.1",
  "pyparsing==3.2.3",
  "pyproject_hooks==1.2.0",
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "readme_renderer==44.0",
  "requests==2.32.3",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==14.0.0",
  "rsa==4.9",
  "SecretStorage==3.3.3",
  "twine==6.1.0",
  "uritemplate==4.1.1",
  "urllib3==2.4.0"
]

[project.urls]
Homepage = "https://github.com/COSC381-2025Winter/lab13-sprint-google-translate-game"
Issues = "https://github.com/COSC381-2025Winter/lab13-sprint-google-translate-game/issues"
